feat: different path

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "https://david.roncancio.me/blog",
   "browserslist": {
     "production": [
       ">0.2%",
