--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^17.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^5.0.3",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
+    "use-http": "^1.0.19",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
